# connector

./: README.md  bun.lockb  index.html  next.config.mjs  package.json  setup.sh  start.sh  tailwind.config.js  vite.config.ts
.github/workflows/: tauri.yml
app/: layout.tsx  loading.tsx  page.tsx
components/: MultipleInput.tsx  api.tsx  layout.tsx  loader.tsx  main-nav.tsx  multiple-input.tsx  result-render.tsx  sidenav-toggler.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
components/api/: add-api.tsx  api-result.tsx  api.tsx  input-tabs.tsx  update-api.tsx
components/env-variables/: page.tsx
components/sideNav/: add-api-dialog.tsx  add-collection-dialog.tsx  breadcrumb.tsx  navigations.ts  page.tsx  render-navigation.tsx
components/ui/: button.tsx  form.tsx  input.tsx  select.tsx  sheet.tsx  toast.tsx  toaster.tsx
config/: site.ts
hooks/: useImportJSON.tsx
lib/: utils.ts
src/: Routes.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: breadcrumb.tsx  dynamic-input.tsx  editor.tsx  error.tsx  layout.tsx  loading.tsx  multiple-input.tsx  notFound.tsx  result-renderer.tsx  theme-toggler.tsx
src/config/: config.ts  confit.ts  downloading-urls.ts  editorOptions.ts  firebase.ts
src/hooks/: useApiComponent.tsx  useImportJSON.tsx  useRenderNav.tsx  useUpdate.tsx
src/lib/: fetcher.ts  utils.ts
src/pages/: page.tsx
src/store/: createFolder.tsx  store.tsx  (+3 more)
store/: store.tsx
styles/: globals.css
types/: api.ts
(+39 files in other folders)
